--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,13 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
+  <ion-navbar >
+    <ion-title >Home</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
+  <h2>Bem Vindo !</h2>
   <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+    Não sei o que digitar aqui, então finge que tem algo legal kkklk
   </p>
   <p>
     Take a look at the <code>src/pages/</code> directory to add or change tabs,
